all expect d