@@ -3,6 +3,8 @@ import java.util.Scanner;
 
 public class Ex0 {
     public static void main(String[] args) {
+        long startTime = System.nanoTime();  // Start time
+
         Scanner scanner = new Scanner(System.in);
         int number;
 
@@ -30,8 +32,25 @@ public class Ex0 {
                             myList.add(i);
                         }
                     }
-                    System.out.printf("c) There are %d prime numbers in %s%n", myList.size(), "[" + myList.getFirst() + "," + myList.getLast() + "]");
-                break;
+                    System.out.printf("c) There are %d prime numbers in %s%n", myList.size(), "[" + myList.get(0) + "," + myList.get(myList.size() - 1) + "]");
+
+                    List<Integer> primeNumbers = new ArrayList<>();
+                    for ( int i = 2; i <=  number; i++) {
+                        if (isPrime(i) && (number % i == 0)) {
+                            primeNumbers.add(i);
+                        }
+                    }
+                    StringBuilder result = new StringBuilder("d) ");
+                    for (int i = 0; i < primeNumbers.size(); i++) {
+                        result.append(primeNumbers.get(i));
+
+                        if (i < primeNumbers.size() - 1) {
+                            result.append(" * ");
+                        }
+                    }
+                    result.append(" = ").append(number);
+                    System.out.println(result.toString());
+                    break;
                 } else {
                     System.out.println("The number must be greater than 4 and even. Please try again.");
                 }
@@ -40,13 +59,17 @@ public class Ex0 {
                 scanner.next();
             }
         }
-
+        long endTime = System.nanoTime();  // End time
+        double durationSeconds = (endTime - startTime) / 1_000_000_000.0;  // Convert to seconds
+        System.out.printf("e) %.2f seconds, the program runtime%n", durationSeconds);
+        System.out.println("f) ID: 208291377");
     }
+
     public static boolean isPrime(int n) {
         if (n == 2) return true;
         if (n % 2 == 0) return false;
         for (int i = 3; i * i <= n; i += 2) { //
-            if (n % i == 0){
+            if (n % i == 0) {
                 return false;
             }
         }
